--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@angular/upgrade": "2.0.0-rc.5",
     "angular2-in-memory-web-api": "0.0.15",
+    "chai": "^3.5.0",
     "concurrently": "^2.0.0",
     "core-js": "^2.4.0",
     "mocha": "^3.0.2",
