--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "concurrently": "^2.0.0",
     "core-js": "^2.4.0",
     "mocha": "^3.0.2",
+    "mocha-mongo": "^0.2.0",
+    "mongodb": "^2.2.5",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "supertest": "^2.0.0",
